--- a/Kanban.Server/appsettings.Development.json
+++ b/Kanban.Server/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "mysuperlongsecretkey_that_is_at_least_32_chars",
+    "Issuer": "yourapp",
+    "Audience": "yourapp_users"
   }
 }
